Opened 14 years ago

Closed 14 years ago

#1385 closed defect (fixed)

FFmpeg seems to hang when reencoding mpeg-ps to mp4

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: undetermined
Version: git-master Keywords: mov regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Originally reported here and in ticket #1329.
Another regression since 91360ce, possibly related to ticket #187.
ffmpeg hangs, the output file grows.

$ ffmpeg -i invalid_cliping_on_screen_hangs_ffpmpeg_endless_file_grow.mpg -qscale 2 -strict experimental out.mp4
ffmpeg version N-41200-gaac41ec Copyright (c) 2000-2012 the FFmpeg developers
  built on Jun  1 2012 10:02:11 with gcc 4.3.2
  configuration: --cc=/usr/local/gcc-4.3.2/bin/gcc --enable-gpl --enable-libopenjpeg --enable-libvorbis --enable-libspeex --enable-libmp3lame --enable-libtheora --extra-ldflags=-lm --enable-libvpx --enable-libxavs
  libavutil      51. 55.100 / 51. 55.100
  libavcodec     54. 23.100 / 54. 23.100
  libavformat    54.  6.101 / 54.  6.101
  libavdevice    54.  0.100 / 54.  0.100
  libavfilter     2. 77.100 /  2. 77.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
[mpeg @ 0x90113c0] max_analyze_duration 5000000 reached at 5015467
Input #0, mpeg, from 'invalid_cliping_on_screen_hangs_ffpmpeg_endless_file_grow.mpg':
  Duration: 26:31:34.39, start: 0.622000, bitrate: 0 kb/s
    Stream #0:0[0x1e0]: Video: mpeg1video, yuv420p, 640x480 [SAR 1:1 DAR 4:3], 1452 kb/s, 25 fps, 25 tbr, 90k tbn, 25 tbc
    Stream #0:1[0x1c0]: Audio: mp2, 44100 Hz, stereo, s16, 128 kb/s
Please use -q:a or -q:v, -qscale is ambiguous
[buffer @ 0x9018780] w:640 h:480 pixfmt:yuv420p tb:1/90000 sar:1/1 sws_param:flags=2
[buffersink @ 0x9018aa0] No opaque field provided
[aformat @ 0x9010a40] auto-inserting filter 'auto-inserted resampler 0' between the filter 'Parsed_anull_0' and the filter 'aformat'
[aresample @ 0x900a240] chl:stereo fmt:s16 r:44100Hz -> chl:stereo fmt:flt r:44100Hz
Output #0, mp4, to 'out.mp4':
  Metadata:
    encoder         : Lavf54.6.101
    Stream #0:0: Video: mpeg4 ( [0][0][0] / 0x0020), yuv420p, 640x480 [SAR 1:1 DAR 4:3], q=2-31, 200 kb/s, 25 tbn, 25 tbc
    Stream #0:1: Audio: aac ([64][0][0][0] / 0x0040), 44100 Hz, stereo, flt, 128 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (mpeg1video -> mpeg4)
  Stream #0:1 -> #0:1 (mp2 -> aac)
Press [q] to stop, [?] for help

Works fine with -ss 1

Change History (4)

comment:1 by Carl Eugen Hoyos, 14 years ago

Sample uploaded to samples/ffmpeg-bugs/trac/ticket1385

comment:2 by burek, 14 years ago

he (the guy that asked for help on forum) uploaded some samples to ffmpeg ftp server and file names are:
invalid_cliping_on_screen_but_encodes_finishes.mpg
invalid_cliping_on_screen_hangs_ffpmpeg_endless_file_grow.mpg

comment:3 by Carl Eugen Hoyos, 14 years ago

Sample uploaded to samples/ffmpeg-bugs/trac/ticket1385

comment:4 by Michael Niedermayer, 14 years ago

Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.