ffmpeg: add code to perform ts wrap correction

Fixes ticket1385

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>